# tpt-augur

./: BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TODO 1260711.md  TODO.md  spec.txt
.github/workflows/: ci.yml  publish.yml
compiler/augur-frontend/: Cargo.toml  README.md  grammar.js
compiler/augur-frontend/src/: ast.rs  lib.rs
compiler/augur-frontend/tests/: frontend.rs
compiler/augur-ir/: Cargo.toml  README.md
compiler/augur-ir/src/: lib.rs  lower.rs
compiler/augur-ir/tests/: ir.rs
compiler/augur-lsp/: Cargo.toml  README.md
compiler/augur-lsp/src/: lib.rs  main.rs
compiler/augur-lsp/tests/: lsp.rs  lsp_process.rs
compiler/augur-mlir/: Cargo.toml  README.md
compiler/augur-mlir/src/: build.rs  codegen.rs  dialect.rs  graphviz.rs  lib.rs  passes.rs
compiler/augur-mlir/tests/: mlir.rs
compiler/tpt-augur-frontend/: Cargo.toml  README.md
compiler/tpt-augur-frontend/src/: diagnostics.rs  format.rs  lexer.rs  parser.rs
compiler/tpt-augur-frontend/tests/: frontend.rs
compiler/tpt-augur-ir/: Cargo.toml  README.md
compiler/tpt-augur-ir/src/: lib.rs  lower.rs
compiler/tpt-augur-ir/tests/: ir.rs
compiler/tpt-augur-lsp/: Cargo.toml  README.md
compiler/tpt-augur-lsp/src/: lib.rs  main.rs
compiler/tpt-augur-lsp/tests/: lsp.rs  lsp_process.rs
compiler/tpt-augur-mlir/: Cargo.toml  README.md
compiler/tpt-augur-mlir/src/: build.rs  codegen.rs  dialect.rs  graphviz.rs  lib.rs  passes.rs
compiler/tpt-augur-mlir/tests/: mlir.rs
docs/: API.md  neovim.md  packaging.md
editors/vscode/: README.md  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: augur.tmLanguage.json
examples/: ar1_timeseries.augur  bayesian_regression.augur  beta_binomial.augur  keystone_live_prior.augur  normal_mean.augur
integration/augur-keystone/: Cargo.toml
integration/augur-keystone/src/: lib.rs
integration/augur-keystone/tests/: keystone.rs  live_integration.rs
integration/augur-locus/: Cargo.toml
integration/augur-locus/src/: lib.rs
integration/augur-locus/tests/: locus.rs
integration/augur-tpt/: Cargo.toml  README.md
integration/augur-tpt/src/: lib.rs
integration/augur-tpt/tests/: tpt.rs
integration/tpt-augur-keystone/: Cargo.toml
integration/tpt-augur-keystone/src/: lib.rs
integration/tpt-augur-keystone/tests/: keystone.rs  live_integration.rs
integration/tpt-augur-locus/: Cargo.toml
integration/tpt-augur-locus/src/: lib.rs
integration/tpt-augur-locus/tests/: locus.rs
integration/tpt-augur-tpt/: Cargo.toml  README.md
integration/tpt-augur-tpt/src/: lib.rs
integration/tpt-augur-tpt/tests/: tpt.rs
pkg/augur-pkg/: Cargo.toml  README.md
pkg/augur-pkg/src/: lib.rs
pkg/augur-pkg/tests/: pkg.rs
pkg/tpt-augur-pkg/: Cargo.toml  README.md
pkg/tpt-augur-pkg/src/: lib.rs
pkg/tpt-augur-pkg/tests/: pkg.rs
runtime/augur-runtime/: Cargo.toml  README.md
runtime/augur-runtime/src/: common.rs  engine.rs  hmc.rs  lib.rs  mh.rs  pf.rs  trace.rs  transforms.rs  vi.rs
runtime/augur-runtime/tests/: runtime.rs
runtime/tpt-augur-runtime/: Cargo.toml  README.md
runtime/tpt-augur-runtime/src/: common.rs  engine.rs  hmc.rs  lib.rs  mh.rs  pf.rs  transforms.rs  vi.rs
runtime/tpt-augur-runtime/tests/: runtime.rs
scripts/: check_todo.py
stdlib/augur-std/: Cargo.toml  README.md
stdlib/augur-std/src/: dist.rs  lib.rs  special.rs
stdlib/augur-std/tests/: std.rs
stdlib/tpt-augur-std/: Cargo.toml  README.md
stdlib/tpt-augur-std/src/: dist.rs  lib.rs
stdlib/tpt-augur-std/tests/: std.rs
stubs/locus-core/: Cargo.toml
stubs/locus-core/src/: lib.rs
stubs/tpt-sdk/: Cargo.toml
stubs/tpt-sdk/src/: lib.rs
tools/augur-cli/: Cargo.toml  README.md
tools/augur-cli/src/: main.rs
tools/augur-cli/tests/: cli.rs
tools/tpt-augur-cli/: Cargo.toml  README.md
tools/tpt-augur-cli/src/: main.rs
tools/tpt-augur-cli/tests/: cli.rs
