[workspace]
members = [
    "compiler/augur-frontend",
    "compiler/augur-ir",
    "compiler/augur-mlir",
    "runtime/augur-runtime",
    "stdlib/augur-std",
    "pkg/augur-pkg",
    "integration/augur-tpt",
    "integration/augur-locus",
    "integration/augur-keystone",
    "tools/augur-cli",
    "compiler/augur-lsp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
description = "TPT Augur: a hardware-accelerated probabilistic programming language"
authors = ["TPT Solutions"]
repository = "https://github.com/PhillipC05/tpt-augur"
homepage = "https://github.com/PhillipC05/tpt-augur"
readme = "README.md"

[workspace.dependencies]
augur-frontend = { path = "compiler/augur-frontend" }
augur-ir = { path = "compiler/augur-ir" }
augur-mlir = { path = "compiler/augur-mlir" }
augur-runtime = { path = "runtime/augur-runtime" }
augur-std = { path = "stdlib/augur-std" }
augur-pkg = { path = "pkg/augur-pkg" }

rand = "0.8"
rand_distr = "0.4"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.16"
