[workspace]
members = [
    "compiler/tpt-augur-frontend",
    "compiler/tpt-augur-ir",
    "compiler/tpt-augur-mlir",
    "runtime/tpt-augur-runtime",
    "stdlib/tpt-augur-std",
    "pkg/tpt-augur-pkg",
    "integration/tpt-augur-tpt",
    "integration/tpt-augur-locus",
    "integration/tpt-augur-keystone",
    "tools/tpt-augur-cli",
    "compiler/tpt-augur-lsp",
    "stubs/locus-core",
    "stubs/tpt-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TPT Augur: a hardware-accelerated probabilistic programming language"
authors = ["TPT Solutions"]
repository = "https://github.com/tpt-solutions/tpt-augur"

[workspace.dependencies]
tpt-augur-frontend = { path = "compiler/tpt-augur-frontend", version = "0.1.0" }
tpt-augur-ir = { path = "compiler/tpt-augur-ir", version = "0.1.0" }
tpt-augur-mlir = { path = "compiler/tpt-augur-mlir", version = "0.1.0" }
tpt-augur-runtime = { path = "runtime/tpt-augur-runtime", version = "0.1.0" }
tpt-augur-std = { path = "stdlib/tpt-augur-std", version = "0.1.0" }
tpt-augur-pkg = { path = "pkg/tpt-augur-pkg", version = "0.1.0" }
locus-core = { path = "stubs/locus-core", version = "0.1.0" }
tpt-sdk = { path = "stubs/tpt-sdk", version = "0.1.0" }

rand = "0.8"
rand_distr = "0.4"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.16"
