[package]
name = "augur-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur typed IR: lowering, type-checking, and uncertainty propagation"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
documentation = "https://docs.rs/augur-ir"
keywords = ["compiler", "probabilistic", "bayesian", "ir", "inference"]
categories = ["compilers", "science"]

[dependencies]
augur-frontend = { workspace = true }
augur-std = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
