[package]
name = "augur-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server for the Augur probabilistic programming language"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
documentation = "https://docs.rs/augur-lsp"
keywords = ["lsp", "language-server", "probabilistic", "ide", "augur"]
categories = ["development-tools"]

[dependencies]
augur-frontend = { workspace = true }
augur-ir = { workspace = true }
augur-mlir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
