[package]
name = "tpt-augur-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur lexer, AST, and error-tolerant parser"
repository.workspace = true
readme = "README.md"
keywords = ["probabilistic-programming", "parser", "lexer", "ast"]
categories = ["parser-implementations", "compilers"]

[dependencies]
serde = { workspace = true }

[dev-dependencies]
