[package]
name = "tpt-augur-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server for the Augur probabilistic programming language"
repository.workspace = true
readme = "README.md"
keywords = ["lsp", "language-server", "probabilistic-programming"]
categories = ["development-tools"]

[dependencies]
tpt-augur-frontend = { workspace = true }
tpt-augur-ir = { workspace = true }
tpt-augur-mlir = { workspace = true }
serde_json = { workspace = true }
