[package]
name = "augur-locus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur <-> TPT Locus bridge: probability-of-success scoring for agent strategies"
repository.workspace = true
publish = false

[dependencies]
augur-frontend = { workspace = true }
augur-ir = { workspace = true }
augur-runtime = { workspace = true }
locus-core = { path = "../../../tpt-locus/locus-core" }
thiserror = { workspace = true }
