[package]
name = "augur-tpt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur <-> tpt-gpu interop: hardware-target dispatch and TPTIR handoff"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["gpu", "probabilistic-programming", "interop"]
categories = ["science"]

[dependencies]
augur-frontend = { workspace = true }
augur-ir = { workspace = true }
augur-mlir = { workspace = true }
augur-runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
