[package]
name = "tpt-augur-keystone"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur <-> TPT Keystone DB: query bindings and live prior updates"
repository.workspace = true
publish = false

[dependencies]
tpt-augur-frontend = { workspace = true }
tpt-augur-ir = { workspace = true }
tpt-sdk = { path = "../../../tpt-keystone-db/tpt-sdk" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
