[package]
name = "augur-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur package manifest format and registry wrapper"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["package-manager", "manifest", "probabilistic-programming"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
