[package]
name = "augur-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur inference runtime: MH, HMC, variational, and particle-filter engines"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
documentation = "https://docs.rs/augur-runtime"
keywords = ["mcmc", "bayesian", "inference", "hmc", "statistics"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
augur-frontend = { workspace = true }
augur-ir = { workspace = true }
augur-std = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
