[package]
name = "augur-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur inference runtime: MH, HMC, variational, and particle-filter engines"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["mcmc", "bayesian", "inference", "probabilistic-programming"]
categories = ["science", "algorithms"]

[dependencies]
augur-frontend = { workspace = true }
augur-ir = { workspace = true }
augur-std = { workspace = true }
rand = { workspace = true }
