[package]
name = "tpt-augur-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur inference runtime: MH, HMC, variational, and particle-filter engines"
repository.workspace = true
readme = "README.md"
keywords = ["mcmc", "bayesian", "inference", "probabilistic"]
categories = ["science", "algorithms"]

[dependencies]
tpt-augur-frontend = { workspace = true }
tpt-augur-ir = { workspace = true }
tpt-augur-std = { workspace = true }
rand = { workspace = true }
