[package]
name = "augur-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur standard library: probability distributions with log-density and sampling"
repository.workspace = true

[dependencies]
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
