[package]
name = "augur-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur standard library: probability distributions with log-density and sampling"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
documentation = "https://docs.rs/augur-std"
keywords = ["probability", "bayesian", "statistics", "distributions", "sampling"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
