[package]
name = "augur-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur standard library: probability distributions with log-density and sampling"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["probability", "distributions", "statistics"]
categories = ["science", "mathematics"]

[dependencies]
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
