[package]
name = "augur-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Augur command-line interface: build, run, check, and format models"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cli", "probabilistic-programming", "bayesian"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "augur"
path = "src/main.rs"

[dependencies]
augur-frontend = { workspace = true }
augur-ir = { workspace = true }
augur-runtime = { workspace = true }
augur-mlir = { workspace = true }
augur-pkg = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
